--- a/yumigo - Copy/burger.html
+++ b/yumigo - Copy/burger.html
@@ -124,6 +124,12 @@ color:rgba(100, 98, 98, 0.872);
         <div class="textbox2">30-40 min | sector 4</div>
         <div class="textbox3"><b>Chai,Coffee,Shakes...</b></div>
              </div>
+             <div class="box2 box2-3">
+                <img src="https://b.zmtcdn.com/data/pictures/chains/6/10556/09c94209d2359acc20ca8119d54f4a1c.jpg?fit=around|960:500&crop=960:500;*,*"" class="img1" alt="image" height="60%" width="100%">
+                <div class="textbox1">SUBWAY</div>
+                <div class="textbox2">30-40 min | sector 4</div>
+                <div class="textbox3"><b>Chai,Coffee,Shakes...</b></div>
+                     </div>
     </div>
     
     
