changes added final evaluation

--- a/yumigo/checkout.html
+++ b/yumigo/checkout.html
@@ -22,7 +22,7 @@
             <p class="text-2xl ">Total is</p>
             <p id="amount" class="text-2xl ml-auto "></p>
         </div>
-        <button onclick="window.open('barista.html')" class="bg-red-500 p-2 text-2xl rounded-xl mt-5 ml-auto mr-auto w-fit">Checkout</button>
+        <button onclick="window.open('tracking.html')" class="bg-red-500 p-2 text-2xl rounded-xl mt-5 ml-auto mr-auto w-fit">Checkout</button>
     </div>
 </body>
 <script>
