--- a/yumigo/home.html
+++ b/yumigo/home.html
@@ -17,8 +17,8 @@
 
             <nav class="navbar">
                 <ul>
-                    <li><a href="file:///C:/Users/priya/OneDrive/Desktop/vscode/index7.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="file:///C:/Users/abc/Desktop/yumigo%20food/yumigo/home.html">HOME</a></li>
+                    <li><a href="file:///C:/Users/abc/Desktop/yumigo%20food/yumigo/about%20us.html">ABOUT</a></li>
                     <li><a href="#">PAGES</a></li>
                     <li><a href="#">REVIEW</a></li>
                     <li><a href="#">GALLERY</a></li>
@@ -281,8 +281,7 @@
             </div>
         </div>
 
-<!-- 
-        <script src="main.js"></script> -->
+        <script src="home1.js"></script>
   <!--Footer-->
 <footer>
     <div class="footer-col">
